<resources>

    <string name="app_name">Moderno</string>
    <!--App config defaults-->

    <!-- FCM Mandatory settings (in order not to have to use the Fcm plugin) - DO NOT REMOVE unless you are using the Fcm plugin-->
    <string name="default_web_client_id" translatable="false">362029831337-bu888b8el4dq33b45pacc3iv5u6gt7up.apps.googleusercontent.com</string>
    <string name="firebase_database_url" translatable="false">https://pingid-sdk-demo-app.firebaseio.com</string>
    <string name="gcm_defaultSenderId" translatable="false">362029831337</string>
    <string name="google_app_id" translatable="false">1:362029831337:android:64036186acc8cc5f</string>
    <string name="google_storage_bucket" translatable="false">pingid-sdk-demo-app.appspot.com</string>
    <!-- FCM Mandatory -->

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN ON</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_authentication_failed">Authentication failed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unpair">Unpair from PingID</string>
    <string name="pushless_mode_on">Pushless mode on</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="app_prefs_title">App Preferences</string>
    <string name="app_prefs_prompt_app_id">Application Id</string>
    <string name="app_prefs_prompt_hosting_server_url">Hosting server URL</string>
    <string name="app_prefs_prompt_push_sender_id">Push Sender Id</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="send_logs">Send logs</string>
    <string name="logout">Log out</string>
    <string name="add_device_title">Trust Device</string>
    <string name="add_primary_device_prompt">This will make this device your primary device to be used for mobile banking and authentication.</string>
    <string name="add_trusted_device_prompt">This will make this device a trusted device to be used for mobile banking and authentication.</string>
    <string name="app_prefs_are_you_sure_you_want_to_unpair">Are you sure you want to unpair?</string>
    <string name="app_prefs_are_you_sure">Are you sure?</string>
    <string name="auth_please_authenticate">Please authenticate</string>
    <string name="auth_transaction_authorization">Transaction Authorization</string>
    <string name="auth_please_approve_transfer">Please approve the transfer of </string>
    <string name="pairing_pairing_now">Thank you, pairing now...</string>
    <string name="pairing_new_device_will_be_paired">Thank you, the new device will be paired...</string>
    <string name="pairing_problem">Problem pairing...</string>
    <string name="pairing_denied">Pairing denied</string>
    <string name="authentication_denied">Authentication was denied</string>
    <string name="transaction_denied">Transaction was denied</string>
    <string name="error_connection_failed">Connection to the hosting server failed</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="sign_on_authorization">Sign On Authorization</string>
    <string name="new_auth_notification_title">New Authentication</string>
    <string name="new_auth_notification_body">You have a new authentication request</string>

    <!-- Action bar resources -->
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="step_up_transfer_between_accounts">Transfer Between Accounts</string>
    <string name="step_up_accounts">Checking --> Savings</string>
    <string name="account_balance">Account Balance</string>
    <string name="copyright">© 2017 Moderno</string>
    <string name="logo_moderno_mobile">logo_moderno_mobile</string>
    <string name="button_menu">buttonMenu</string>
</resources>
