<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="pingidsdk.pingidentity.com.simpledemo.AuthenticationActivity"
    android:background="@color/white"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/viewAuth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:visibility="visible"

            >
            <ImageView
                android:id="@+id/topLogo"
                android:layout_height="50dp"
                android:src="@drawable/ic_ipagoo"
                android:layout_marginBottom="0dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo_moderno_mobile"
                android:layout_width="170dp"
                android:layout_marginTop="6dp"
                />

            <TextView
                android:id="@+id/transactionApprovalCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sign_on_authorization"
                android:layout_below="@+id/topLogo"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp"
                android:id="@+id/transactionApprovalCaptions"
                android:layout_below="@+id/transactionApprovalCaption"
                android:paddingTop="44dp"
                android:paddingLeft="52dp"
                android:paddingRight="52dp"
                android:visibility="invisible"
                >

                <TextView
                    android:id="@+id/textCaption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/step_up_transfer_between_accounts"
                    android:visibility="invisible"
                    android:layout_marginTop="2dp"
                    />

                <TextView
                    android:id="@+id/textCaption3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_up_accounts"
                    android:textSize="14sp"
                    android:visibility="invisible"
                    android:layout_marginTop="2dp"
                    />

                <TextView
                    android:id="@+id/textCaption4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:visibility="invisible"
                    android:layout_marginTop="2dp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="Payee: IATA" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="Payee Sort Code : 23-34-56" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="Payee Account : 00015245" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="Payment Ref : EM1314-74921" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="Amount : £2.00" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/transactionApprovalButtons"
                android:layout_below="@+id/transactionApprovalCaptions"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                >


                <Button
                    android:id="@+id/denyButton"
                    android:text="@string/deny"
                    android:layout_marginTop="6dp"
                    style="@style/denyButton"
                    android:background="@drawable/rounded_deny_button"
                    />

                <Button
                    android:id="@+id/approveButton"
                    android:text="@string/approve"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="18dp"
                    style="@style/approveButton"
                    android:background="@drawable/rounded_approve_button"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewSuccess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/approvedImage"
                android:layout_height="wrap_content"
                android:src="@drawable/approved"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo_moderno_mobile"
                android:layout_width="320dp"
                android:layout_marginTop="6dp"
                android:visibility="gone"
                />


            <ImageView
                android:id="@+id/transferredImage"
                android:layout_height="wrap_content"
                android:src="@drawable/transferred"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo_moderno_mobile"
                android:layout_width="320dp"
                android:layout_marginTop="6dp"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/timeoutImage"
                android:layout_height="wrap_content"
                android:src="@drawable/timeout"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo_moderno_mobile"
                android:layout_width="320dp"
                android:layout_marginTop="6dp"
                android:visibility="gone"
                />

        </LinearLayout>


    </FrameLayout>


</RelativeLayout>
